# dsaiengineering

./: .gitignore  README.md
.github/: FUNDING.yml
blog/: 20260413-uncertainty-ml-model-prediction.md  20260414-chisq-goodness-of-fit.md  20260415-tabular-foundation-models-1.md  20260416-understanding-tabular-foundation-models-posterior-predictive-distribution.md  20260417-understanding-tabular-foundation-models-architecture-tabpfn.pptx  20260421-understanding-tabular-foundation-models-tabpfn-repo.md  20260422-understanding-tabular-foundation-models-playing-with-tabpfn-handson-demo.md  20260423-understanding-tabular-foundation-models-trying-tabpfn-client.md  20260424-understanding-tabular-foundation-models-extracting-embeddings-to-enhance-existing-ml-models.md  20260427-understanding-tfm-predictive-behavior-tabpfn.md  20260428-understanding-tfm-time-series-forecasting-tabpfn.md  20260429-understanding-tfm-causal-inference-tabpfn.md  20260430-understanding-tfm-tabpfn-tabicl-supml.md  20260501-tabpfn-tabicl-fraud-detection-1.md
computer_vision/: llm_extract_books.py
courses-certifications-educational-resources/: interview-prep.md
search_and_ranking/search_and_ranking_demo/: Dockerfile  README.md  pyproject.toml  run_demo.py
search_and_ranking/search_and_ranking_demo/data/: catalog.csv  query_doc_labels.csv  query_intents.csv
search_and_ranking/search_and_ranking_demo/search/: __init__.py  ann_index.py  business_rules.py  data_loader.py  dual_encoder.py  evaluation.py  ontology.py  personalization.py  query_understanding.py  ranking.py  retrieval.py  spell.py
(+100 files in other folders)
